--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <input
           type="text"
           class="form-control"
+          id="inputTask"
           placeholder="Ingrese una tarea"
           aria-label="Recipient's username"
           aria-describedby="button-addon2"
@@ -50,14 +51,9 @@
     <div class="divTareas" id="DivTareas">
         <p>Ingrese una tarea</p>
     </div>
-    <div class="divTareas" id="divTareasAdd">
-        <p></p>
-    </div>
-
-
     </main>
 
 <!-- SCRIPTS APP JS -->
-<script src="./src/app.js"></script>
+<script src="./src/app.js" defer></script>
   </body>
 </html>
