--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           +
         </button>
     </div>
-    <div class="divTareas" id="DivTareas">
+    <div class="divTareas" id="divTareas">
         <p>Ingrese una tarea</p>
     </div>
     </main>
 
 <!-- SCRIPTS APP JS -->
-<script src="./src/app.js" defer></script>
+<script defer src="./src/app.js"></script>
   </body>
 </html>
