--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <button class="btn btn-outline-secondary" type="button" id="btnAddItem">
           +
         </button>
-    </div>
-    <div class="divTareas" id="divTareas">
+      </div>
+      <div class="divTareas" id="divTareas">
         <p>Ingrese una tarea</p>
-    </div>
+      </div>
+      <ul id="listaContainer"></ul>
     </main>
-
-<!-- SCRIPTS APP JS -->
-<script defer src="./src/app.js"></script>
+    <!-- SCRIPTS APP JS -->
+    <script defer src="./src/app.js"></script>
   </body>
 </html>
