--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="divTareas" id="divTareas">
         <p>Ingrese una tarea</p>
       </div>
-      <ul id="listaContainer"></ul>
+      <div id="listaContainer"></div>
     </main>
     <!-- SCRIPTS APP JS -->
     <script defer src="./src/app.js"></script>
