--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDolist</title>
+  <!-- CUSTOM CSS -->
+  <link rel="stylesheet" href="./styles/styles.css">
   <!-- BT5 CSS LINK -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
 </head>
 <body>
-  <div class="todo_container ">
-    <h1>To Do List</h1>
-    <input type="text" id="taskInput" placeholder="Add a New Task">
-    <button onclick="addTask()">Add Task</button>
+  <div class="todo_container">
+    <h1 class="bg-dark">To Do List</h1>
+    <div class="input_container">
+      <input type="text" id="taskInput" placeholder="Add a New Task">
+      <button onclick="addTask()">Add Task</button>
+    </div>
     <ul id="taskList"></ul>
-  </div>
+  
+
 
   <!-- B5 BUNDLE JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
