--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="input_container">
         <h1 class="titulo">ToDoList</h1>
         <input type="text" id="taskInput" placeholder="Add a New Task" />
-        <button class="btn-primary"onclick="addTask()">Add Task</button>
+        <button class="btn-primary" id="btnAddTask">Add Task</button>
       </div>
       <ul id="taskList" style="display: none;"></ul>
     </div>
